# dictpy

./: .coverage  .coveragerc  CHANGELOG.txt  LICENSE.txt  README.md  pyproject.toml  setup.cfg  tox.ini
src/dictpy/: __init__.py  dict_search.py  serializer.py
tests/: README.md  cid_6.json  test_dict_search.py  test_serializer.py
