[metadata]
name = dictpy
version = 0.0.2
description = Searching Python Dictionaries/JSON files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Dylan Walsh
url = https://github.com/dylanwal/dictpy
license = BSD
license_file = LICENSE.txt
platforms = any
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    dictpy
python_requires = >=3.8
package_dir =
    =src
zip_safe = no
include_package_data = true


[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9


[options.package_data]
dictpy = py.typed

[flake8]
max-line-length = 160